--- a/src/assets/scss/content/homepage/sections/section.news.scss
+++ b/src/assets/scss/content/homepage/sections/section.news.scss
@@ -109,7 +109,7 @@
 
                 @include typo( 0.5rem, 0.075em );
 
-                @include color( $dark, 0.325 );
+                @include color( $dark, 0.000 );
 
                 transform: translate3d( 0, 0, 0 );
 
